# CanonicalPathTools

./: .gitignore  Fig1.ipynb  README.md  pixi.toml  utils.py
2019/: Fig1.ipynb  Fig1.py  S1.py  S2.py  S3.py  SMFigs1-2.ipynb  SMFigs1-2.py  settings.py
data/: cleaned_API_SP.POP.TOTL_DS2_en_csv_v2_84031.csv  cleaned_measlescasedata.csv
scripts/: Fig1.py  clean_data.py  plot_country_cases.py
src/: pyproject.toml
src/src/: paths.py  standards.py  utils.py
